k8s/kafdrop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop-ui
  namespace: voxx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafdrop-ui
  template:
    metadata:
      labels:
        app: kafdrop-ui
    spec:
      containers:
        - name: kafdrop
          image: obsidiandynamics/kafdrop:latest
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: kafdrop-ui
  namespace: voxx
spec:
  selector:
    app: kafdrop-ui
  ports:
    - name: http
      port: 9000
      targetPort: 9000
