k8s/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-service
  namespace: voxx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-service
  template:
    metadata:
      labels:
        app: keycloak-service
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0.6
          args: ["start-dev", "--import-realm"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: realm-config
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: realm-config
          hostPath:
            path: /opt/voxx/realm-config
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: voxx
spec:
  selector:
    app: keycloak-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
