k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-service
  namespace: voxx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-service
  template:
    metadata:
      labels:
        app: postgres-service
    spec:
      containers:
        - name: postgres
          image: postgres:14
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: app-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: voxx
spec:
  selector:
    app: postgres-service
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
