k8s/zookeeper-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-service
  namespace: voxx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper-service
  template:
    metadata:
      labels:
        app: zookeeper-service
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.5.0
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: voxx
spec:
  selector:
    app: zookeeper-service
  ports:
    - name: client
      port: 2181
      targetPort: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-service
  namespace: voxx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-service
  template:
    metadata:
      labels:
        app: kafka-service
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.5.0
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: voxx
spec:
  selector:
    app: kafka-service
  ports:
    - name: broker
      port: 9092
      targetPort: 9092
